--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import-normalize; /* bring in normalize.css styles */
+@import-normalize;
 
 body {
   margin: 0;
@@ -12,4 +12,116 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.searchbar {
+  background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.8) 50%, rgba(255, 255, 255, 0) 100%);
+  background-size: 200% 100%; /* Розмір градієнту */
+  animation: shine 4s linear infinite; 
+  width: 100%;
+  height: 100px;
+  background-color: #00bfff;
+  position: relative;
+}
+
+@keyframes shine {
+  0% {
+    background-position: 0 0; 
+  }
+  50% {
+    background-position: 100% 0; 
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
+form {
+  position: relative;
+  top: 10px;
+  display: flex;
+  flex-direction: column; 
+  align-items: center;
+}
+button {
+  
+  width: 90px;
+  height: 30px;
+
+  font-size: 20px;
+  font-weight: bold;
+
+  background-image: linear-gradient(90deg, #ff8282, #e178ed);
+  background-clip: text;
+  color: transparent;
+  -webkit-background-clip: text; 
+
+ border-bottom: 2px solid #ff8282;
+ border-right: none;
+ border-left: none;
+ border-top: none;
+ margin-bottom: 6px;
+ transition: 1s;
+}
+button:hover {
+  border: 2px solid #ff8282;
+  border-radius: 22px;
+  transition: 1s;
+}
+input {
+  padding-left: 10px;
+  width: 290px;
+  height: 30px;
+  background-image: linear-gradient(90deg, #ff8282, #e178ed);
+  background-clip: text;
+  color: transparent;
+  -webkit-background-clip: text; 
+  border-bottom: 2px solid #ff8282;
+  border-right: none;
+  border-left: none;
+  border-top: none;
+  margin-bottom: 6px;
+  transition: 1s;
+}
+input:hover {
+  border: 2px solid #ff8282;
+  border-radius: 22px;
+  transition: 1s;
+}
+input:focus {
+  border: 2px solid #ff8282;
+  border-radius: 22px;
+  transition: 1s;
+}
+
+ul {
+  justify-content: center;
+  list-style: none; 
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px; 
+  transition: 1s;
+}
+
+li {
+  height: 210px;
+  width: 300px; 
+  background-color: transparent; 
+  text-align: center;
+  border: none; 
+  transition: 1s;
+}
+img {
+  width: 300px;
+  height: 210px;
+  transition: 1s;
+}
+li:hover {
+  width: 320px;
+  height: 230px;
+  transition: 1s;
+}
+img:hover {
+  width: 320px;
+  height: 230px;
+  transition: 1s;
 }
