--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ code {
 }
 .searchbar {
   background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.8) 50%, rgba(255, 255, 255, 0) 100%);
-  background-size: 200% 100%; /* Розмір градієнту */
+  background-size: 200% 100%; 
   animation: shine 4s linear infinite; 
   width: 100%;
   height: 100px;
@@ -124,4 +124,76 @@ img:hover {
   width: 320px;
   height: 230px;
   transition: 1s;
+}
+.load-more-button {
+  position: absolute;
+  margin-top: 10px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: 1s;
+} 
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000; 
+  transition: 1s;
+}
+
+
+.modal {
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  width: 600px; 
+  height: 510px;
+  transition: 1s;
+}
+
+
+.modal img {
+  width: 100%; 
+  height: 100%;
+  display: block;
+  margin: 0 auto;
+
+  border: 4px solid;
+  border-image: linear-gradient(45deg, #ff8282, #e178ed);
+  border-image-slice: 1;
+  transition: 1s;
+}
+
+
+
+
+/* SCROLL  */
+
+::-webkit-scrollbar {
+  width: 10px;
+  border-radius: 10px;
+
+}
+
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+  border-radius: 10px;
+
+}
+::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 10px;
+
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+  border-radius: 10px;
+
 }
